# Torch-Incremental-Checkpoint

./: .gitignore  README.md  pyproject.toml  setup.py
benchmarks/: bench_delta.py  bench_e2e.py  bench_synthetic.py
checkpoint_engine/: __init__.py  async_writer.py  delta.py  lifecycle.py  manager.py  manifest.py  metrics.py  store.py
cli/: ckpt.py
csrc/: bindings.cpp  blob_prepare.cpp  blob_prepare.h  delta_engine.cpp  delta_engine.h
tests/: test_delta.py  test_lifecycle.py  test_manager.py  test_manifest.py  test_metrics.py  test_store.py
