[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "torch>=2.1",
    "pybind11>=2.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-incremental-checkpoint"
version = "0.1.0"
description = "Delta-based incremental checkpointing for PyTorch models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.1",
    "zstandard>=0.21",
    "pybind11>=2.11",
]

[project.optional-dependencies]
cli   = ["click>=8.1", "rich>=13.0"]
bench = ["transformers>=4.40", "matplotlib>=3.8"]
dev   = ["pytest>=7.4", "pytest-timeout"]

[project.scripts]
ckpt = "cli.ckpt:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
exclude = ["tests*", "benchmarks*", "csrc*"]
